external-crates/move/move-compiler/tests/move_check/parser/ability_modifier_postfix_missing_semi_multiple_structs.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/ability_modifier_postfix_missing_semi_multiple_structs.move:5:19
  │
5 │     struct Foo {} has store
  │                   ^^^
  │                   │
  │                   Unexpected 'has'
  │                   Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/ability_modifier_postfix_missing_semi_multiple_structs.move:5:19
  │
5 │     struct Foo {} has store
  │                   ^^^  not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

